fix(tooltip): avoid calc in start alignment and top position

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -193,9 +193,10 @@
 
   &::before {
     @if ($position == 'top') {
+      top: -$caret-spacing;
       border-width: rem(5px) rem(4px) 0 rem(4px);
       border-color: $inverse-02 transparent transparent transparent;
-      transform: translate(-50%, calc(-1 * (#{$translate-caret})));
+      transform: translate(-50%, -100%);
     }
     @if ($position == 'right') {
       border-width: rem(4px) rem(5px) rem(4px) 0;
@@ -223,9 +224,10 @@
   &:hover + .#{$prefix}--assistive-text,
   &:focus + .#{$prefix}--assistive-text {
     @if ($position == 'top') {
+      top: -$body-spacing;
       @if ($align == 'start') {
         left: 0;
-        transform: translate(0, calc(-1 * (#{$translate-body})));
+        transform: translate(0, -100%);
       } @else if ($align == 'end') {
         right: 0;
         left: initial;
